--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         /* --- BLOCK 1 (HERO) --- */
         .block-1 {
-            width: 100%; height: 15vh;
+            width: 100%; height: 25vh;
             background-image: url('images/fon1.jpg');
             background-size: cover; background-position: center;
             display: flex; justify-content: center; align-items: center;
@@ -1002,7 +1002,7 @@
                 <button class="buy-btn">КУПИТЬ КУРС</button>
             </div>
             
-            <h2 style="font-size: 24px; margin: 32px 0 16px; color: var(--color-pink);">МЫ В СОЦСЕТЯХ</h2>
+            <h2 style="font-size: 24px; margin: 32px 0 16px; color: var(--color-pink);">ПРИСОЕДИНЯЙТЕСЬ</h2>
             <div style="display:flex; gap:24px; justify-content:center;">
                 <a href="https://t.me/NEIRO_BISTRO_bot" target="_blank" style="color:var(--color-blue); font-weight:600; font-size:15px;">TELEGRAM</a>
                 <a href="https://www.instagram.com/neirobistro/" target="_blank" style="color:var(--color-pink); font-weight:600; font-size:15px;">INSTAGRAM</a>
