--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             display: flex; justify-content: center; align-items: center;
         }
         .block-1__logo {
-            max-width: 500px; width: 70%;
+            max-width: 350px; width: 70%;
             object-fit: contain;
             filter: drop-shadow(0 10px 20px rgba(0,0,0,0.3));
         }
@@ -685,7 +685,7 @@
                 <h2 class="lesson-title">УРОК 1</h2>
                 <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы. Какой GPT лучше использовать и почему.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -696,7 +696,7 @@
                 <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 1</h2>
                 <p class="lesson-desc">От идеи до сценария - как использовать GPT для рекламы, мультика или истории.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -707,7 +707,7 @@
                 <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 2</h2>
                 <p class="lesson-desc">Продолжение работы со сценариями и промптами.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -738,7 +738,7 @@
                 <h2 class="lesson-title">УРОК 1 | Ч.1</h2>
                 <p class="lesson-desc">Создание LORA во FLUX</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-15" style="background-image: url('images/fon15.jpg');">
@@ -748,7 +748,7 @@
                 <h2 class="lesson-title">УРОК 1 | Ч.2</h2>
                 <p class="lesson-desc">Практика создания LORA во FLUX</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-16" style="background-image: url('images/fon16.jpg');">
@@ -758,7 +758,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
                 <p class="lesson-desc">Создание LORA в HIGSFIELD</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-17" style="background-image: url('images/fon17.jpg');">
@@ -768,7 +768,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
                 <p class="lesson-desc">Практика в HIGSFIELD</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -803,7 +803,7 @@
                 <h2 class="lesson-title">УРОК 1</h2>
                 <p class="lesson-desc">Навигация по MJ. Редактор и описатель.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-20" style="background-image: url('images/fon20.jpg');">
@@ -813,7 +813,7 @@
                 <h2 class="lesson-title">УРОК 2</h2>
                 <p class="lesson-desc">Структура промпта. Уникальный стиль.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-21" style="background-image: url('images/fon21.jpg');">
@@ -823,7 +823,7 @@
                 <h2 class="lesson-title">УРОК 3</h2>
                 <p class="lesson-desc">Создание персонажа. Omnireference.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -847,7 +847,7 @@
                 <h2 class="lesson-title">УРОК 1</h2>
                 <p class="lesson-desc">Навигация, бесплатные альтернативы, коммерческие заказы.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-24" style="background-image: url('images/fon24.jpg');">
@@ -857,7 +857,7 @@
                 <h2 class="lesson-title">УРОК 2</h2>
                 <p class="lesson-desc">Фотосессии с множеством героев пошагово.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-25" style="background-image: url('images/fon25.jpg');">
@@ -867,7 +867,7 @@
                 <h2 class="lesson-title">УРОК 3</h2>
                 <p class="lesson-desc">Смена ракурсов, изменение фона с сохранением героя.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section block-26" style="background-image: url('images/fon26.jpg');">
@@ -877,7 +877,7 @@
                 <h2 class="lesson-title">УРОК 4</h2>
                 <p class="lesson-desc">Альтернативный способ сохранения: Runway Frames.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ УРОК</a>
+            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
