--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
             /* Block 3 (People) */
             .block-3 { padding: 40px 0 0; min-height: 310px; }
-            .block-3__header { padding: 0; text-align: center; margin-bottom: 20px; }
+            .block-3__header { padding: 10px; text-align: center; margin-bottom: 20px; }
             .block-3__title { font-size: 14px !important; }
             .block-3__people { flex-direction: row; gap: 8px; align-items: flex-end; }
             .person-card { width: 32%; }
