--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
             .block-2__text-box p { margin-bottom: 10px; }
 
             /* Block 3 (People) */
-            .block-3 { padding: 40px 0 0; min-height: 310px; }
-            .block-3__header { padding: 10px; text-align: center; margin-bottom: 20px; }
+            .block-3 { padding: 0 0 45px; min-height: 310px; }
+            .block-3__header { margin: 50px 160px 0 0; text-align: center; margin-bottom: 20px; }
             .block-3__title { font-size: 14px !important; }
             .block-3__people { flex-direction: row; gap: 8px; align-items: flex-end; }
             .person-card { width: 32%; }
