--- a/index.html
+++ b/index.html
@@ -213,12 +213,64 @@
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
-    <section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
-        <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 2</h2><p class="lesson-desc">Структура промпта. Уникальный стиль.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+
+
+   <section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
+    <div class="container lesson-container relative-z">
+        <div class="lesson-content">
+            <div class="lesson-module">МОДУЛЬ 3</div>
+            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 1</h2>
+            <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
+            <p class="lesson-desc">
+                Структура промпта.<br>
+                Создание вашего уникального стильного<br>
+                контента на базе кодов стиля,<br>
+                референсов стиля.
+            </p>
         </div>
-    </section>
+        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+    </div>
+</section>
+
+<section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
+    <div class="container lesson-container relative-z">
+        <div class="lesson-content">
+            <div class="lesson-module">МОДУЛЬ 3</div>
+            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 2</h2>
+            <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
+            <p class="lesson-desc">
+                Структура промпта.<br>
+                Создание вашего уникального стильного<br>
+                контента на базе кодов стиля,<br>
+                референсов стиля.
+            </p>
+        </div>
+        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+    </div>
+</section>
+
+<section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
+    <div class="container lesson-container relative-z">
+        <div class="lesson-content">
+            <div class="lesson-module">МОДУЛЬ 3</div>
+            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 3</h2>
+            <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
+            <p class="lesson-desc">
+                Структура промпта.<br>
+                Создание вашего уникального стильного<br>
+                контента на базе кодов стиля,<br>
+                референсов стиля.
+            </p>
+        </div>
+        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+    </div>
+</section>
+
+
+
+
+
+
     <section class="lesson-section overlay-container" style="background-image: url('images/fon21.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Создание персонажа. Omnireference.</p></div>
