--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <div class="lesson-module">МОДУЛЬ 1</div>
                 <h2 class="lesson-title">УРОК 1</h2>
                 <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы. Какой GPT лучше использовать и почему.</p>
+                <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">🤖 Перейти в Syntx AI Bot</a>
             </div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
@@ -156,6 +157,10 @@
     <section class="split-section">
         <div class="split-image">
             <img src="images/foto13.png" alt="Module 2 Photo">
+            <div class="split-overlay">
+                <div class="split-module-label">МОДУЛЬ 2</div>
+                <div class="split-main-title">Нейрофотосессия</div>
+            </div>
         </div>
         <div class="split-content bg-pink">
             <div class="split-inner">
@@ -195,11 +200,15 @@
     <section class="split-section">
         <div class="split-image">
             <img src="images/foto18.png" alt="Module 3 Photo">
+            <div class="split-overlay">
+                <div class="split-module-label">МОДУЛЬ 3</div>
+                <div class="split-main-title">Midjourney - нейронка,<br>которая задает стиль.</div>
+            </div>
         </div>
         <div class="split-content bg-grey">
             <div class="split-inner">
                 <h2 class="split-title">МОДУЛЬ 3</h2>
-                <p class="split-sub">Midjourney — нейронка, которая задает стиль</p>
+                <p class="split-sub">Midjourney — нейронка,<br>которая задает стиль</p>
                 <div class="split-item"><h4>Урок 1</h4><p>Навигация, редактор, описатель.</p></div>
                 <div class="split-item"><h4>Урок 2</h4><p>Структура промпта. Коды стиля.</p></div>
                 <div class="split-item"><h4>Урок 3</h4><p>Персонаж на базе Omnireference.</p></div>
@@ -219,7 +228,7 @@
     <div class="container lesson-container relative-z">
         <div class="lesson-content">
             <div class="lesson-module">МОДУЛЬ 3</div>
-            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 1</h2>
+            <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
             <p class="lesson-desc">
                 Структура промпта.<br>
@@ -227,8 +236,9 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -236,7 +246,7 @@
     <div class="container lesson-container relative-z">
         <div class="lesson-content">
             <div class="lesson-module">МОДУЛЬ 3</div>
-            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 2</h2>
+            <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
             <p class="lesson-desc">
                 Структура промпта.<br>
@@ -244,8 +254,9 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -253,7 +264,7 @@
     <div class="container lesson-container relative-z">
         <div class="lesson-content">
             <div class="lesson-module">МОДУЛЬ 3</div>
-            <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 3</h2>
+            <h2 class="lesson-title">УРОК 2 | Ч.3</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
             <p class="lesson-desc">
                 Структура промпта.<br>
@@ -261,8 +272,9 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ УРОК</a>
+        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -281,6 +293,10 @@
     <section class="split-section">
         <div class="split-image">
             <img src="images/foto22.png" alt="Module 4 Photo">
+            <div class="split-overlay">
+                <div class="split-module-label">МОДУЛЬ 4</div>
+                <div class="split-main-title">Сохранение персонажа,<br>коммерческие возможности.<br>Nano banano, SeeDream, Runway.</div>
+            </div>
         </div>
         <div class="split-content bg-pink">
             <div class="split-inner">
@@ -319,6 +335,10 @@
     <section class="split-section">
         <div class="split-image">
             <img src="images/foto27.png" alt="Module 5 Photo">
+            <div class="split-overlay">
+                <div class="split-module-label">МОДУЛЬ 5</div>
+                <div class="split-main-title">Видео блок</div>
+            </div>
         </div>
         <div class="split-content bg-grey">
             <div class="split-inner">
@@ -369,6 +389,10 @@
     <section class="split-section">
         <div class="split-image">
             <img src="images/foto34.png" alt="Module 6 Photo">
+            <div class="split-overlay">
+                <div class="split-module-label">МОДУЛЬ 6</div>
+                <div class="split-main-title">Озвучка, финальный монтаж,<br>выход на продакшн.</div>
+            </div>
         </div>
         <div class="split-content bg-grey">
             <div class="split-inner">
