--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Курс по нейросетям от AI-артистов Аллы Леоновой и Аси Бабковской.">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive-width.css">
 </head>
 <body>
 
@@ -68,7 +69,7 @@
             <h1>АСЯ БАБКОВСКАЯ</h1>
             <div class="block-bio__img-wrap"><img src="images/ASYA_BABKOVSKA5.png" alt="Asya" class="block-bio__img"></div>
             <div class="block-bio__content">
-                <p class="block-bio__text">ИИ-артист и креатор с 7-летним опытом по созданию<br>визуала для брендов. Основные направления в моей<br> работе: нейросети/генеративный арт, моушн, графический<br> дизайн. Режисёрский опыт: постановка и режиссура<br> рекламных и творческих роликов.<br>География проектов: Россия-Москва, Санкт-Петербург,<br> Крым, Пятигорск, Сочи, ОАЭ-Дубай, Латинская Америка.</p>
+                <p class="block-bio__text">ИИ-артист и креатор с 7-летним опытом по созданию<br>визуала для брендов. Основные направления в моей<br> работе: нейросети/генеративный арт, моушн, графический<br> дизайн. Режисёрский опыт: постановка и режиссура<br> рекламных и творческих роликов.<br><br>География проектов: Россия-Москва, Санкт-Петербург,<br> Крым, Пятигорск, Сочи, ОАЭ-Дубай, Латинская Америка.</p>
             </div>
         </div>
     </section>
@@ -113,7 +114,7 @@
             <img src="images/tarelka9.png" class="block-9__img">
             <div class="block-9__text">
                 <h2>МОДУЛЬ 1</h2>
-                <p style="font-weight: 700;">Чат GPT. Создание структуры промпта.</p>
+                <p style="font-weight: 500;">Чат GPT. Создание структуры промпта.</p>
                 <div><h4>Урок 1</h4><p>Навигация по syntx. Альтернативы. Какой GPT лучше?</p></div>
                 <div><h4>Урок 2</h4><p>От идеи до сценария. GPT как сценарный ассистент.</p></div>
             </div>
@@ -122,11 +123,11 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon10.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content">
+            <div class="lesson-content w-200">
                 <div class="lesson-module">МОДУЛЬ 1</div>
                 <h2 class="lesson-title">УРОК 1</h2>
-                <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы. Какой GPT лучше использовать и почему.</p>
-                <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">🤖 Перейти в Syntx AI Bot</a>
+                <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы.<br>Какой GPT лучше использовать и почему.</p>
+                <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">Перейти в Syntx AI Bot</a>
             </div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
@@ -134,9 +135,9 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon11.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content">
+            <div class="lesson-content w-190">
                 <div class="lesson-module">МОДУЛЬ 1</div>
-                <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 1</h2>
+                <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
                 <p class="lesson-desc">От идеи до сценария - как использовать GPT для рекламы, мультика или истории.</p>
             </div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
@@ -145,9 +146,9 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon12.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content">
+            <div class="lesson-content w-200">
                 <div class="lesson-module">МОДУЛЬ 1</div>
-                <h2 class="lesson-title">УРОК 2 | ЧАСТЬ 2</h2>
+                <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
                 <p class="lesson-desc">Продолжение работы со сценариями и промптами.</p>
             </div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
@@ -180,7 +181,7 @@
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon15.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.2</h2><p class="lesson-desc">Практика создания LORA во FLUX</p></div>
+            <div class="lesson-content w-180"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.2</h2><p class="lesson-desc">Практика создания LORA во FLUX</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -218,7 +219,7 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon19.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация по MJ. Редактор и описатель.</p></div>
+            <div class="lesson-content w-200"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация по MJ. Редактор и описатель.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -226,7 +227,7 @@
 
    <section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
     <div class="container lesson-container relative-z">
-        <div class="lesson-content">
+        <div class="lesson-content w-230">
             <div class="lesson-module">МОДУЛЬ 3</div>
             <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
@@ -236,7 +237,7 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
-            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">Миджорней Васильевич</a>
         </div>
         <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
@@ -244,7 +245,7 @@
 
 <section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
     <div class="container lesson-container relative-z">
-        <div class="lesson-content">
+        <div class="lesson-content w-230">
             <div class="lesson-module">МОДУЛЬ 3</div>
             <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
@@ -254,7 +255,7 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
-            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">Миджорней Васильевич</a>
         </div>
         <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
@@ -262,7 +263,7 @@
 
 <section class="lesson-section overlay-container" style="background-image: url('images/fon20.jpg');">
     <div class="container lesson-container relative-z">
-        <div class="lesson-content">
+        <div class="lesson-content w-230">
             <div class="lesson-module">МОДУЛЬ 3</div>
             <h2 class="lesson-title">УРОК 2 | Ч.3</h2>
             <p class="lesson-promo">Midjourney — нейронка,<br>которая задает стиль.</p>
@@ -272,7 +273,7 @@
                 контента на базе кодов стиля,<br>
                 референсов стиля.
             </p>
-            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">🤖 Миджорней Васильевич</a>
+            <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">Миджорней Васильевич</a>
         </div>
         <a href="#" class="btn-primary">СМОТРЕТЬ</a>
     </div>
@@ -285,7 +286,7 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon21.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Создание персонажа. Omnireference.</p></div>
+            <div class="lesson-content w-230"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Создание персонажа. Omnireference.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -309,25 +310,25 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon23.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация, бесплатные альтернативы, коммерческие заказы.</p></div>
+            <div class="lesson-content w-275"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация, бесплатные альтернативы, коммерческие заказы.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon24.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 2</h2><p class="lesson-desc">Фотосессии с множеством героев пошагово.</p></div>
+            <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 2</h2><p class="lesson-desc">Фотосессии с множеством героев пошагово.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon25.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Смена ракурсов, изменение фона с сохранением героя.</p></div>
+            <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Смена ракурсов, изменение фона с сохранением героя.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon26.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 4</h2><p class="lesson-desc">Альтернативный способ сохранения: Runway Frames.</p></div>
+            <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 4</h2><p class="lesson-desc">Альтернативный способ сохранения: Runway Frames.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -351,25 +352,26 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon28.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 1</h2><p class="lesson-desc">Навигация по видео-нейросетям.</p></div>
+            <div class="lesson-content w-260"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 1</h2><p class="lesson-desc">Навигация по видео-нейросетям.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon29.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 2</h2><p class="lesson-desc">Veo 3.1 - Text to Video. Видео без референса.</p></div>
+            <div class="lesson-content w-250"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 2</h2><p class="lesson-desc">Veo 3.1 - Text to Video.<br>Видео без референса.</p>
+            <a href="https://s3.ru1.storage.beget.cloud/5c700d161bd9-infinite-sabina/neiro_bistro_failes/новый 1.txt" target="_blank" class="lesson-link">ИНСТРУКЦИЯ ДЛЯ ChatGPT</a></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon30.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 3</h2><p class="lesson-desc">Kling. Морфинг, пролеты камеры, оживление.</p></div>
+            <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 3</h2><p class="lesson-desc">Kling. Морфинг, пролеты камеры, оживление.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon31.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 4</h2><p class="lesson-desc">Sora, Seedance, Luma. Танцы и реклама.</p></div>
+            <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 4</h2><p class="lesson-desc">Sora, Seedance, Luma. Танцы и реклама.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -405,19 +407,19 @@
 
     <section class="lesson-section overlay-container" style="background-image: url('images/fon35.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 1</h2><p class="lesson-desc">Синтез речи, озвучка текста, генератор звуков.</p></div>
+            <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 1</h2><p class="lesson-desc">Синтез речи, озвучка текста, генератор звуков.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon36.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 2</h2><p class="lesson-desc">Suno. Создание песен и музыки для кино.</p></div>
+            <div class="lesson-content w-170"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 2</h2><p class="lesson-desc">Suno. Создание песен и музыки для кино.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon37.jpg');">
         <div class="container lesson-container relative-z">
-            <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 3</h2><p class="lesson-desc">Финальный монтаж. От старта до продакшна.</p></div>
+            <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 3</h2><p class="lesson-desc">Финальный монтаж.<br>От старта до продакшна.</p></div>
             <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
@@ -434,7 +436,7 @@
                 <button class="buy-btn">КУПИТЬ КУРС</button>
             </div>
             
-            <h2 style="font-size: 24px; margin: 32px 0 16px; color: var(--color-pink);">ПРИСОЕДИНЯЙТЕСЬ</h2>
+            <h2 style="font-size: 20px; margin: 32px 0 16px; color: #fff;">ПРИСОЕДИНЯЙТЕСЬ</h2>
             <div style="display:flex; gap:24px; justify-content:center;">
                 <a href="https://t.me/NEIRO_BISTRO_bot" target="_blank" style="color:var(--color-blue); font-weight:600; font-size:15px;">TELEGRAM</a>
                 <a href="https://www.instagram.com/neirobistro/" target="_blank" style="color:var(--color-pink); font-weight:600; font-size:15px;">INSTAGRAM</a>
